--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "backbone.wreqr": "github:marionettejs/backbone.wreqr@^1.3.3",
       "css": "github:systemjs/plugin-css@^0.1.13",
       "handlebars": "github:components/handlebars.js@^3.0.3",
-      "hbs": "github:davis/plugin-hbs@master",
+      "hbs": "github:davis/plugin-hbs@1.0.0",
       "jquery": "github:components/jquery@^2.1.4",
       "marionette": "github:marionettejs/backbone.marionette@^2.4.2",
       "underscore": "npm:underscore@^1.8.3"
