--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "serve": "^1.4.0"
   },
   "jspm": {
-    "directories": {},
     "dependencies": {
       "babel-core": "npm:babel-core@^5.7.1",
       "backbone": "npm:backbone@^1.2.1",
@@ -37,8 +36,7 @@
       "backbone.radio": "npm:backbone.radio@^1.0.0",
       "backbone.wreqr": "github:marionettejs/backbone.wreqr@^1.3.3",
       "css": "github:systemjs/plugin-css@^0.1.13",
-      "handlebars": "github:components/handlebars.js@^4.0.2",
-      "hbs": "github:davis/plugin-hbs@1.1.0",
+      "hbs": "github:davis/plugin-hbs@^1.2.0",
       "jquery": "github:components/jquery@^2.1.4",
       "marionette": "github:marionettejs/backbone.marionette@^2.4.2",
       "underscore": "npm:underscore@^1.8.3"
