--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "backbone.babysitter": "github:marionettejs/backbone.babysitter@^0.1.8",
       "backbone.radio": "npm:backbone.radio@^1.0.0",
       "backbone.wreqr": "github:marionettejs/backbone.wreqr@^1.3.3",
+      "clean-css": "npm:clean-css@^3.4.5",
       "css": "github:systemjs/plugin-css@^0.1.13",
       "hbs": "github:davis/plugin-hbs@^1.2.0",
       "jquery": "github:components/jquery@^2.1.4",
@@ -42,9 +43,9 @@
       "underscore": "npm:underscore@^1.8.3"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.1.13",
-      "babel-runtime": "npm:babel-runtime@^5.1.13",
-      "core-js": "npm:core-js@^0.9.4"
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
     }
   }
 }
