--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "postinstall": "jspm install",
+    "build": "jspm bundle-sfx src/main dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "open http://localhost:3000/src",
     "poststart": "serve ."
