--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "jspm install",
     "build": "jspm bundle-sfx src/main dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "open http://localhost:3000/src",
+    "start": "open http://localhost:3000/",
     "poststart": "serve ."
   },
   "repository": {
