--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
       "backbone.wreqr": "github:marionettejs/backbone.wreqr@^1.3.3",
       "clean-css": "npm:clean-css@^3.4.5",
       "css": "github:systemjs/plugin-css@^0.1.13",
-      "hbs": "github:davis/plugin-hbs@^1.2.0",
+      "handlebars": "github:components/handlebars.js@^4.0.5",
+      "hbs": "github:davis/plugin-hbs@^1.2.1",
       "jquery": "github:components/jquery@^2.1.4",
       "marionette": "github:marionettejs/backbone.marionette@^2.4.2",
       "underscore": "npm:underscore@^1.8.3"
